2008-01-06  Dan Winship  <danw@gnome.org>

	* libsoup/soup-server.c (got_headers): if raw_paths isn't set,
	decode the request's uri->path before doing anything else
	(soup_server_class_init): add "raw-paths" property, to tell
	SoupServer to NOT decode the Request-URI path.

	* libsoup/soup-auth-domain.c (soup_auth_domain_covers): Revert
	earlier path-decoding change; that happens at the SoupServer level
	now.

2008-01-06  Dan Winship  <danw@gnome.org>

	* libsoup/soup-message-body.c (soup_buffer_get_type): Register
	SoupBuffer as a boxed type.

	* libsoup/soup-message.c (soup_message_class_init): Use
	SOUP_TYPE_BUFFER in got_chunk signal definition

	* libsoup/soup-server.c (soup_client_context_get_type): Register
	SoupClientContext as a pointer type
	(soup_server_class_init): use SOUP_TYPE_CLIENT_CONTEXT in signal
	definitions.

	* libsoup/soup-marshal.list: clean this up

2008-01-06  Dan Winship  <danw@gnome.org>

	* libsoup/soup-server.c (SoupClientContext): Make this opaque.
	(soup_client_context_get_socket)
	(soup_client_context_get_auth_domain)
	(soup_client_context_get_auth_user): New accessors
	(soup_server_class_init): Make the signals take a
	SoupClientContext rather than a SoupSocket.
	(start_request, check_auth, call_handler, request_finished): Clean
	these up by using a SoupClientContext to communicate between them.
	(soup_server_add_handler): tweak the argument order to match the
	gtk standard (callback, user_data, destroynotify).

2008-01-06  Dan Winship  <danw@gnome.org>

	* libsoup/soup-address.c: remove the "dns_result" signal, which
	was just an implementation detail of soup_address_resolve_async().

2008-01-06  Dan Winship  <danw@gnome.org>

	* libsoup/*.c: misc documentation updates/gtk-doc fixes

	* libsoup/soup-server.c: finally start documenting this properly.

	* libsoup/soup-status.h (SoupStatusClass): kill this, since
	soup_message_add_status_class_handler() is gone now.

	* libsoup/soup-status.c (soup_status_get_phrase): Update docs to